objects/Historias_de_Usuario__c.object
<CustomObject>
    <description>Este objeto tiene se crea con el fin de vincular las Historias de Usuario con los componentes desarrollados en cada historia. Los componentes se usarán para crear los perfiles. Se popula con contendido del objeto User Stories de Copado</description>
    <fields>
        <fullName>Codigo_de_la_Funcionalidad__c</fullName>
        <formula>Funcionalidad__r.C_digo_de_la_Funcionalidad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código de la Funcionalidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funcionalidad__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funcionalidad</label>
        <referenceTo>Funcionalidad__c</referenceTo>
        <relationshipLabel>Historias de Usuario</relationshipLabel>
        <relationshipName>Historias_de_Usuario</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historias_de_Usuario_Jira__c</fullName>
        <label>Historias de Usuario (Jira)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Historia de Usuario</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Historias de Usuario (Copado)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historias de Usuario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>